--- a/vanilla/multi-step-form/src/styles/steps/topics.css
+++ b/vanilla/multi-step-form/src/styles/steps/topics.css
@@ -1,5 +1,8 @@
+.topics-step > * + * {
+  margin-top: 1.5rem;
+}
 .topics-step .step__title {
-  margin-bottom: 2.5rem;
+  margin-bottom: 1rem;
 }
 .topics-step__group {
   display: flex;
